--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "esbox": "dist/lib/cli.js"
   },
   "dependencies": {
+    "ansi-escapes": "^1.3.0",
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-node4": "^2.0.3",
@@ -21,14 +22,18 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "chalk": "^1.1.1",
-    "clear-trace": "0.0.7",
     "cli-color": "^1.1.0",
-    "code-error": "0.0.2",
+    "execa": "^0.2.2",
+    "figures": "^1.4.0",
+    "is-absolute": "^0.2.3",
     "lodash": "^4.6.1",
     "meow": "^3.7.0",
+    "minimist": "^1.2.0",
+    "path-exists": "^2.1.0",
     "pretty-hrtime": "^1.0.2",
     "sane": "^1.3.3",
-    "source-map-support": "^0.4.0"
+    "stack-trace": "0.0.9",
+    "subdir": "0.0.3"
   },
   "devDependencies": {
     "ava": "^0.13.0",
@@ -37,7 +42,6 @@
     "eslint": "~2.2.0",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-babel": "^3.1.0",
-    "execa": "^0.2.2",
     "rimraf": "^2.5.2"
   },
   "engines": {
@@ -51,8 +55,9 @@
   "scripts": {
     "build": "rimraf dist && babel src --out-dir dist --source-maps",
     "build:watch": "rimraf dist && babel src --out-dir dist --watch --source-maps",
+    "lint": "eslint .",
     "prepublish": "npm run build",
-    "test": "eslint . && ava",
+    "test": "ava",
     "test:watch": "ava --watch"
   }
 }
