--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "figures": "^1.4.0",
     "is-absolute": "^0.2.3",
     "lodash": "^4.6.1",
-    "meow": "^3.7.0",
+    "loud-rejection": "^1.3.0",
     "minimist": "^1.2.0",
     "path-exists": "^2.1.0",
     "pretty-hrtime": "^1.0.2",
