--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015-node5": "^1.1.2",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
+    "builtin-modules": "^1.1.1",
     "chalk": "^1.1.1",
     "cli-color": "^1.1.0",
     "execa": "^0.2.2",
