--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "pretty-hrtime": "^1.0.2",
     "sane": "^1.3.3",
     "stack-trace": "0.0.9",
-    "subdir": "0.0.3"
+    "subdir": "0.0.3",
+    "update-notifier": "^0.6.1"
   },
   "devDependencies": {
     "ava": "^0.13.0",
