--- a/package.json
+++ b/package.json
@@ -15,27 +15,64 @@
   },
   "dependencies": {
     "ansi-escapes": "^1.3.0",
+    "async": "^1.5.2",
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-node4": "^2.0.3",
     "babel-preset-es2015-node5": "^1.1.2",
+    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
+    "bluebird": "^3.3.4",
     "builtin-modules": "^1.1.1",
+    "chai": "^3.5.0",
     "chalk": "^1.1.1",
+    "cheerio": "^0.20.0",
     "cli-color": "^1.1.0",
+    "cli-table": "^0.3.1",
+    "co": "^4.6.0",
+    "connect": "^3.4.1",
+    "d3": "^3.5.16",
+    "debug": "^2.2.0",
+    "del": "^2.2.0",
     "execa": "^0.2.2",
+    "express": "^4.13.4",
     "figures": "^1.4.0",
+    "glob": "^7.0.3",
+    "gulp": "^3.9.1",
+    "handlebars": "^4.0.5",
+    "immutable": "^3.7.6",
     "is-absolute": "^0.2.3",
+    "isomorphic-fetch": "^2.2.1",
+    "jade": "^1.11.0",
+    "koa": "^1.2.0",
     "lodash": "^4.6.1",
-    "loud-rejection": "^1.3.0",
+    "marked": "^0.3.5",
+    "minimatch": "^3.0.0",
     "minimist": "^1.2.0",
+    "moment": "^2.12.0",
+    "opn": "^4.0.1",
     "path-exists": "^2.1.0",
     "pretty-hrtime": "^1.0.2",
+    "progress": "^1.1.8",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1",
+    "request": "^2.69.0",
+    "resolve-from": "^2.0.0",
+    "sander": "^0.4.0",
     "sane": "^1.3.3",
+    "semver": "^5.1.0",
+    "sinon": "^1.17.3",
+    "socket.io": "^1.4.5",
     "stack-trace": "0.0.9",
     "subdir": "0.0.3",
-    "update-notifier": "^0.6.1"
+    "through2": "^2.0.1",
+    "underscore": "^1.8.3",
+    "update-notifier": "^0.6.2",
+    "webpack": "^1.12.14",
+    "yosay": "^1.1.0"
   },
   "devDependencies": {
     "ava": "^0.13.0",
