--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "jade": "^1.11.0",
     "koa": "^1.2.0",
     "lodash": "^4.11.2",
-    "marked": "^0.3.5",
+    "markdown-it": "^6.0.1",
     "minimatch": "^3.0.0",
     "minimist": "^1.2.0",
     "moment": "^2.13.0",
