--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "description": "ES2016 in a box",
   "version": "0.7.1",
   "ava": {
-    "babel": false,
     "files": "dist/test/**/*.test.js",
     "source": [
       "dist/lib/**/*.js",
@@ -15,15 +14,15 @@
   },
   "dependencies": {
     "ansi-escapes": "^1.4.0",
-    "async": "^2.0.0-rc.3",
-    "babel-polyfill": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
+    "async": "^2.0.0-rc.6",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-node4": "^2.1.0",
     "babel-preset-es2015-node5": "^1.2.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.8.0",
-    "bluebird": "^3.3.5",
+    "babel-register": "^6.9.0",
+    "bluebird": "^3.4.1",
     "builtin-modules": "^1.1.1",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
@@ -34,11 +33,11 @@
     "connect": "^3.4.1",
     "d3": "^3.5.17",
     "debug": "^2.2.0",
-    "del": "^2.2.0",
+    "del": "^2.2.1",
     "execa": "^0.4.0",
-    "express": "^4.13.4",
-    "figures": "^1.5.0",
-    "glob": "^7.0.3",
+    "express": "^4.14.0",
+    "figures": "^1.7.0",
+    "glob": "^7.0.5",
     "gulp": "^3.9.1",
     "handlebars": "^4.0.5",
     "immutable": "^3.8.1",
@@ -46,41 +45,42 @@
     "isomorphic-fetch": "^2.2.1",
     "jade": "^1.11.0",
     "koa": "^1.2.0",
-    "lodash": "^4.11.2",
-    "markdown-it": "^6.0.1",
+    "lodash": "^4.13.1",
+    "markdown-it": "^7.0.0",
     "minimatch": "^3.0.2",
     "minimist": "^1.2.0",
     "moment": "^2.13.0",
-    "opn": "^4.0.1",
+    "opn": "^4.0.2",
     "path-exists": "^3.0.0",
     "pretty-hrtime": "^1.0.2",
     "progress": "^1.1.8",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "redux": "^3.5.2",
-    "redux-thunk": "^2.0.1",
+    "redux-thunk": "^2.1.0",
     "request": "^2.72.0",
     "resolve-from": "^2.0.0",
-    "sander": "^0.5.0",
-    "sane": "^1.3.4",
-    "semver": "^5.1.0",
+    "sander": "^0.5.1",
+    "sane": "^1.3.5",
+    "semver": "^5.1.1",
     "sinon": "^1.17.4",
-    "socket.io": "^1.4.6",
+    "socket.io": "^1.4.8",
     "stack-trace": "0.0.9",
     "subdir": "0.0.3",
     "through2": "^2.0.1",
     "underscore": "^1.8.3",
-    "update-notifier": "^0.7.0",
-    "webpack": "^1.13.0",
-    "yosay": "^1.1.1"
+    "update-notifier": "^1.0.2",
+    "webpack": "^1.13.1",
+    "yosay": "^1.2.0"
   },
   "devDependencies": {
-    "ava": "~0.13.0",
-    "babel-cli": "^6.8.0",
-    "babel-eslint": "^6.0.4",
-    "eslint": "~2.10.1",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-plugin-babel": "^3.2.0",
+    "ava": "~0.15.2",
+    "babel-cli": "^6.10.1",
+    "babel-eslint": "^6.1.0",
+    "eslint": "~2.13.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-import": "^1.9.2",
     "rimraf": "^2.5.2"
   },
   "engines": {
@@ -96,7 +96,7 @@
     "build:watch": "rimraf dist && babel src --out-dir dist --watch --source-maps",
     "lint": "eslint .",
     "prepublish": "npm run build",
-    "test": "ava",
+    "test": "npm run lint && ava",
     "test:watch": "ava --watch"
   }
 }
